--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>芜湖</title>
 </head>
 <body>
 <div>七里香</div>
-<audio controls src="file:///C:\Users\温\Music\　-七里香.mp3"></audio>
+<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
 
 </body>
-<audio controls src="file:///C:\Users\温\Music\　-七里香.mp3"></audio>
 </html>
