--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<main>
 		<div>七里香</div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
+		<div>晴天</div>
+		<audio controls preload="metadata" src="file:///C:\Users\温\Music\周杰伦-晴天.mp3"></audio>
 	</main>
 </body>
 
