上传更多音乐
上传更多音乐以及 .gitignore

--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
 	<title>音乐播放器</title>
 </head>
 <body>
+	<h1>
+		<ul class="list-detailed list-inline">
+			<li><a class="list-detailed-link" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a></li>
+		</ul>
+	</h1>
 	<header><h1>周杰伦</h1></header>
 	<main>
-		<div>七里香</div>
+		<div><h3>七里香</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
-		<div>晴天</div>
-		<audio controls preload="metadata" src="file:///C:\Users\温\Music\周杰伦-晴天.mp3"></audio>
+		<div><h3>晴天</h3></div>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
+		<div><h3>蒲公英的约定</h3></div>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
+		<header><h1>林俊杰</h1></header>
+		<div><h3>江南</h3></div>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Jiangnan.mp3"></audio>
+
+		
 	</main>
 </body>
 
