--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<div><h3>蒲公英的约定</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
 		<div><h3>夜曲</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio>
+		<audio controls preload="metadata" src="cYequ.mp3"></audio>
+		<div><h3>一路向北</h3></div>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>
 		<header><h1>林俊杰</h1></header>
 		<div><h3>江南</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Jiangnan.mp3"></audio>
