--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<ul class="list-detailed list-inline">
 			<li><a class="list-detailed-link" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a></li>
 		</ul>
-		</h1>>
+		</h1>
 	<header><h1>周杰伦</h1></header>
 	<main>
 		<div><h3>七里香</h3></div>
@@ -20,7 +20,7 @@
 		<div><h3>蒲公英的约定</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
 		<div><h3>夜曲</h3></div>
-		<audio controls preload="metadata" src="cYequ.mp3"></audio>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio>
 		<div><h3>一路向北</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>
 		<header><h1>林俊杰</h1></header>
