--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 		<header><h1>林俊杰</h1></header>
 		<div><h3>江南</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Jiangnan.mp3"></audio>
-		
-
-		
+		<style type="text/css">
+		body{
+			background:url(https://cn.bing.com/th?id=OHR.MayonVolcano_ZH-CN0183039911_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp)
+		}
+		</style>
 	</main>
 </body>
 
