--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <body>
 	<h1>
 		<ul class="list-detailed list-inline">
-			<li><a class="list-detailed-link" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a></li>
+			<li><a class="list-detailed-link" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a>
+			<style type="text/css">
+			body{
+				color: azure;
+			}
+			</style>
+			
+			
+			</li>
 		</ul>
 		</h1>
 	<header><h1>周杰伦</h1></header>
