--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 			body{
 				color: azure;
 			}
+			video {
+				max-width: 30vw;
+			}
 			</style>
-			
-			
 			</li>
 		</ul>
 		</h1>
@@ -28,7 +29,7 @@
 		<div><h3>蒲公英的约定</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
 		<div><h3>夜曲</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio><video id="video" controls preload="metadata" src="/media/video/Yequ.mp4"></video>
 		<div><h3>一路向北</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>
 		<header><h1>林俊杰</h1></header>
@@ -39,6 +40,7 @@
 			background:url(https://cn.bing.com/th?id=OHR.MayonVolcano_ZH-CN0183039911_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp)
 		}
 		</style>
+
 	</main>
 </body>
 
