--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div><h3>七里香</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
 		<div><h3>晴天</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qingtian.mp3"></audio>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qingtian.mp3"></audio><video id="video" controls preload="metadata" src="/media/video/Qingtian.mp4"></video>
 		<div><h3>蒲公英的约定</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
 		<div><h3>夜曲</h3></div>
