--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</li>
 		</ul>
 		</h1>
-	<header><h1>黄政川中周杰伦，拼搏三年，我要吃奥尔良烤鸡翅</h1></header>
+	<header><h1>周杰伦</h1></header>
 	<main>
 		<div><h3>七里香</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
