--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<title>音乐播放器</title>
 </head>
 <body>
+<header><h1>音乐播放器</h1></header>
 	<h1>
 		<ul class="list-detailed list-inline">
-			<li><a class="list-detailed-link" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a>
+			<li><a class="list-detailedink" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a>
 			<style type="text/css">
 			body{
 				color: azure;
