--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Jiangnan.mp3"></audio>
 		<header><h1>时光背面的我</h1></header>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Shiguang.mp3"></audio>
+		<header><h1>Run Free</h1></header>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Runfree.mp3"></audio>
 		<style type="text/css">
 		body{
 			background:url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp)
