--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div><h3>一路向北</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>
 		<div><h3>最长的电影</h3></div>
-		<audio controls preload="metadata" src="/media/audio/Zuichangdedianying.mp3"></audio>
+		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Zuichangdedianying.mp3"></audio>
 		<header><h1>林俊杰</h1></header>
 		<div><h3>江南</h3></div>
 		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Jiangnan.mp3"></audio>
