--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 	<h1>
 		<ul class="list-detailed list-inline">
 			<li><a class="list-detailedink" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a>
-			<style type="text/css">
+				<a class="list-detailedink" href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank"><h3>热铁盒</h3></a>
+				<a class="list-detailedink" href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank"><h3>github</h3></a>
+			<style type="text/c>ss">
 			body{
-				color: azure;
-			}
-			video {
-				max-width: 50vw;
+				color:rgb(255, 255, 255);
 			}
 			</style>
 			</li>
