--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			<li><a class="list-detailedink" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a>
 				<a class="list-detailedink" href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank"><h3>热铁盒</h3></a>
 				<a class="list-detailedink" href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank"><h3>github</h3></a>
-			<style type="text/c>ss">
+			<style type="text/css">
 			body{
-				color:rgb(255, 255, 255);
+				color:rgb(0, 252, 239);
 			}
 			</style>
 			</li>
