--- a/index.html
+++ b/index.html
@@ -4,50 +4,52 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>音乐播放器</title>
+	<style>
+		body{
+			color: rgb(0, 252, 239);
+			background: url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
+			font-size: 2em;
+		}
+	</style>
 </head>
 <body>
-<header><h1>音乐播放器</h1></header>
-	<h1>
-		<ul class="list-detailed list-inline">
-			<li><a class="list-detailedink" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h3>哔哩哔哩</h3></a>
-				<a class="list-detailedink" href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank"><h3>热铁盒</h3></a>
-				<a class="list-detailedink" href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank"><h3>github</h3></a>
-			<style type="text/css">
-			body{
-				color:rgb(0, 252, 239);
-			}
-			</style>
-			</li>
-		</ul>
-		</h1>
-	<header><h1>周杰伦</h1></header>
+	<header>
+		<h1>音乐播放器</h1>
+	</header>
 	<main>
-		<div><h3>七里香</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
-		<div><h3>晴天</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qingtian.mp3"></audio>
-		<div><h3>蒲公英的约定</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
-		<div><h3>夜曲</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio>
-		<div><h3>一路向北</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>
-		<div><h3>最长的电影</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Zuichangdedianying.mp3"></audio>
-		<header><h1>林俊杰</h1></header>
-		<div><h3>江南</h3></div>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Jiangnan.mp3"></audio>
-		<header><h1>时光背面的我</h1></header>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Shiguang.mp3"></audio>
-		<header><h1>Run Free</h1></header>
-		<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Runfree.mp3"></audio>
-		<style type="text/css">
-		body{
-			background:url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp)
-		}
-		</style>
-
-
+		<section>
+			<ul class="list-detailed list-inline">
+				<li>
+					<a class="list-detailedink" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h4>哔哩哔哩</h4></a>
+					<a class="list-detailedink" href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank"><h4>热铁盒</h4></a>
+					<a class="list-detailedink" href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank"><h4>github</h4></a>
+				</li>
+			</ul>
+		</section>
+		<section>
+			<h1>周杰伦</h1>
+			<h4>七里香</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
+			<h4>晴天</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qingtian.mp3"></audio>
+			<h4>蒲公英的约定</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
+			<h4>夜曲</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio>
+			<h4>一路向北</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>
+			<h4>最长的电影</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Zuichangdedianying.mp3"></audio>
+		</section>
+		<section>
+			<h1>林俊杰</h1>
+			<h4>江南</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Jiangnan.mp3"></audio>
+			<h4>时光背面的我</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Shiguang.mp3"></audio>
+			<h4>Run Free</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Runfree.mp3"></audio>
+		<section>
 	</main>
 
 
