--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		body{
 			color: rgb(0, 252, 239);
 			background: url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
-			font-size: 2em;
+			font-size: 1.2em;
 		}
 	</style>
 </head>
@@ -18,12 +18,10 @@
 	</header>
 	<main>
 		<section>
-			<ul class="list-detailed list-inline">
-				<li>
-					<a class="list-detailedink" href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank"><h4>哔哩哔哩</h4></a>
-					<a class="list-detailedink" href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank"><h4>热铁盒</h4></a>
-					<a class="list-detailedink" href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank"><h4>github</h4></a>
-				</li>
+			<ul>
+				<li><a href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank">哔哩哔哩</a></li>
+				<li><a href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank">热铁盒</a></li>
+				<li><a href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank">github</a></li>
 			</ul>
 		</section>
 		<section>
@@ -53,7 +51,7 @@
 	</main>
 
 
-
+	
 </body>
 
 
