--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Shiguang.mp3"></audio>
 			<h4>Run Free</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Runfree.mp3"></audio>
-		<section>
+		</section>
 	</main>
 
 
