--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<ul>
 				<li><a href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank">哔哩哔哩</a></li>
 				<li><a href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank">热铁盒</a></li>
-				<li><a href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank">github</a></li>
+				<li><a href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank">Github</a></li>
 				<style>
 					a{
 						color: aquamarine;
