--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>音乐播放器</title>
 	<style>
 		body{
-			color: rgb(0, 252, 239);
+
 			background: url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
 			font-size: 1.2em;
 		}
@@ -16,6 +16,11 @@
 	<header>
 		<h1>音乐播放器</h1>
 	</header>
+	<style>
+		header{
+			color: pink;
+		}
+	</style>
 	<main>
 		<section>
 			<ul>
@@ -31,7 +36,11 @@
 			</ul>
 		</section>
 		<section>
-			<h1>周杰伦</h1>
+			<style>
+				section {
+					color: pink
+				}
+			</style>
 			<h4>七里香</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
 			<h4>晴天</h4>
