--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<style>
 		header{
 			color: pink;
+			text-align: center;
+
 		}
 	</style>
 	<main>
@@ -37,7 +39,7 @@
 		</section>
 		<section>
 			<style>
-				section {
+				section  {
 					color: pink
 				}
 			</style>
@@ -62,6 +64,7 @@
 			<h4>Run Free</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Runfree.mp3"></audio>
 		</section>
+		
 	</main>
 
 
