--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-	<meta charset="UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>音乐播放器</title>
 	<style>
-		body{
-
+		body {
 			background: url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
 			font-size: 1.2em;
+		}
+
+		header {
+			color: pink;
+			text-align: center;
+		}
+
+		a {
+			color: aquamarine;
+		}
+
+		section {
+			color: pink
+		}
+		div{
+			text-align:justify;
+			color: aquamarine;
 		}
 	</style>
 </head>
@@ -16,60 +32,46 @@
 	<header>
 		<h1>音乐播放器</h1>
 	</header>
-	<style>
-		header{
-			color: pink;
-			text-align: center;
-
-		}
-	</style>
+	<div>联系方式:QQ/微信:240602718</div>
 	<main>
 		<section>
-			
-				<a href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank">哔哩哔哩</a>
-				<a href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank">热铁盒</a>
-				<a href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank">Github</a>
-				<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
-				<style>
-					a{
-						color: aquamarine;
-					}
-				</style>
-				
+			<a href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank">哔哩哔哩</a>
+			<a href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank">热铁盒</a>
+			<a href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank">Github</a>
+			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
+			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw"title="西璃墨"target="_blank">快手</a>
 		</section>
 		<section>
-			<style>
-				section  {
-					color: pink
-				}
-			</style>
 			<h4>七里香</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
 			<h4>晴天</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qingtian.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qingtian.mp3"></audio>
 			<h4>蒲公英的约定</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
 			<h4>夜曲</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio>
 			<h4>一路向北</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>
 			<h4>最长的电影</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Zuichangdedianying.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Zuichangdedianying.mp3"></audio>
 		</section>
 		<section>
 			<h4>起风了</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qifengle.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qifengle.mp3"></audio>
 			<h4>时光背面的我</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Shiguang.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Shiguang.mp3"></audio>
 			<h4>Run Free</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Runfree.mp3"></audio>
+			<audio controls preload="metadata"
+				src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Runfree.mp3"></audio>
 		</section>
-		
 	</main>
-
-
-	
 </body>
-
-
 </html>
