字体位置，颜色
居中，青

--- a/index.html
+++ b/index.html
@@ -26,15 +26,21 @@
 			text-align:justify;
 			color: aquamarine;
 		}
+		#links {
+			text-align: center;
+		}
+		span{
+			color: aquamarine;
+		}
 	</style>
 </head>
 <body>
 	<header>
 		<h1>音乐播放器</h1>
 	</header>
-	<div>联系方式:QQ/微信:240602718</div>
 	<main>
-		<section>
+		<section id="links">
+			<span>联系方式:QQ/微信:240602718</span>
 			<a href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank">哔哩哔哩</a>
 			<a href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank">热铁盒</a>
 			<a href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank">Github</a>
