--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>音乐播放器</title>
+	<title>慕幽音乐</title>
 	<style>
 		body {
 			background: url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
@@ -32,20 +32,21 @@
 		span{
 			color: aquamarine;
 		}
+	
 	</style>
 </head>
 <body>
 	<header>
-		<h1>音乐播放器</h1>
+		<h1>慕幽蓝瑾</h1><h1>音乐播放器</h1>
 	</header>
 	<main>
 		<section id="links">
-			<span>联系方式:QQ/微信:240602718</span>
-			<a href="https://space.bilibili.com/1049799175" title="西璃墨" target="_blank">哔哩哔哩</a>
+			<span>联系方式:QQ/微信:240602718</span>			
+			<a href="https://space.bilibili.com/1049799175" title="慕幽蓝瑾" target="_blank">哔哩哔哩</a>
 			<a href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank">热铁盒</a>
 			<a href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank">Github</a>
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
-			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw"title="西璃墨"target="_blank">快手</a>
+			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw"title="慕幽蓝瑾"target="_blank">快手</a>
 		</section>
 		<section>
 			<h4>七里香</h4>
