--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>				
 			<h4>最长的电影</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Zuichangdedianying.mp3"></audio>
+			<h4>告白气球</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Gaobaiqiqiu.mp3"></audio>
 		</section>
 		<section>
 			<h4>起风了</h4>
@@ -73,6 +75,8 @@
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pokerface.mp3"></audio>
 			<h4>春娇与志明</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Chunjiao.mp3"></audio>
+			<h4>STAY</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Stay.mp3"></audio>
 		</section>
 	</main>
 </body>
