--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
 		section {
 			color: pink
 		}
-		div{
-			text-align:justify;
-			color: aquamarine;
-		}
 		#links {
 			text-align: center;
 		}
 		span{
 			color: aquamarine;
-		}
-	
+		}	
 	</style>
 </head>
 <body>
@@ -46,23 +41,10 @@
 			<a href="https://wenqm.rthe.xyz/" title="音乐播放器" target="_blank">热铁盒</a>
 			<a href="https://github.com/Wen-xili/Wen-xili" title="代码" target="_blank">Github</a>
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
-			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw"title="慕幽蓝瑾"target="_blank">快手</a>
+			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw"title="慕幽蓝瑾" target="_blank">快手</a>
 		</section>
 		<section>
-			<h4>七里香</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qilixiang.mp3"></audio>
-			<h4>晴天</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qingtian.mp3"></audio>
-			<h4>蒲公英的约定</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pugongying.mp3"></audio>
-			<h4>夜曲</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yequ.mp3"></audio>
-			<h4>一路向北</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Yiluxiangbei.mp3"></audio>				
-			<h4>最长的电影</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Zuichangdedianying.mp3"></audio>
-			<h4>告白气球</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Gaobaiqiqiu.mp3"></audio>
+			<a href="http://localhost:5500/songs.html"title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
 		</section>
 		<section>
 			<h4>起风了</h4>
