--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw"title="慕幽蓝瑾" target="_blank">快手</a>
 		</section>
 		<section>
-			<a href="http://localhost:5500/songs.html"title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
+			<a href="/songs.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
 		</section>
 		<section>
 			<h4>起风了</h4>
