--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Chunjiao.mp3"></audio>
 			<h4>STAY</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Stay.mp3"></audio>
+			<h4>Love Story</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Lovestory.mp3"></audio>
 		</section>
 	</main>
 </body>
