--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 			<span>联系方式:QQ/微信:240602718</span>			
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
 			<a href="https://space.bilibili.com/1049799175" title="慕幽蓝瑾" target="_blank">哔哩哔哩</a>			
-			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw"title="慕幽蓝瑾" target="_blank">快手</a>
+			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw" title="慕幽蓝瑾" target="_blank">快手</a>
+			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
 		</section>
 		<section>
 			<a href="/songs.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
