--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		span{
 			color: aquamarine;
 		}	
+		input{
+			background-color: aquamarine;
+		}
 	</style>
 </head>
 <body>
@@ -43,7 +46,8 @@
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
 		</section>
 		<section>
-			<a href="/songs.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
+			<a href="/周杰伦.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
+			<a href="/薛之谦.html" title="经典" target="_blank"><h2>薛之谦</h2></a>
 		</section>
 		<section>
 			<h4>起风了</h4>
