--- a/薛之谦.html
+++ b/薛之谦.html
@@ -26,5 +26,19 @@
         <section>
             <h4>意外</h4>
             <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/意外.mp3"></audio>
+            <h4>演员</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/演员.mp3"></audio>
+            <h4>丑八怪</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/丑八怪.mp3"></audio>
+            <h4>天外来物</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/天外来物.mp3"></audio>
+            <h4>动物世界</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/动物世界.mp3"></audio>
+            <h4>我害怕</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/我害怕.mp3"></audio>
+            <h4>你还要我怎样</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/你还要我怎样.mp3"></audio>
+            <h4>暧昧</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/暧昧.mp3"></audio>
         </section>
     </main>
