--- a/薛之谦.html
+++ b/薛之谦.html
@@ -30,6 +30,9 @@
             <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/演员.mp3"></audio>
             <h4>丑八怪</h4>
             <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/丑八怪.mp3"></audio>
-            
+            <h4>天外来物</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/天外来物.mp3"></audio>
+            <h4>动物世界</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/动物世界.mp3"></audio>
         </section>
     </main>
