--- a/薛之谦.html
+++ b/薛之谦.html
@@ -34,5 +34,9 @@
             <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/天外来物.mp3"></audio>
             <h4>动物世界</h4>
             <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/动物世界.mp3"></audio>
+            <h4>我害怕</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/我害怕.mp3"></audio>
+            <h4>你还要我怎样</h4>
+            <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/你还要我怎样.mp3"></audio>
         </section>
     </main>
