--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<section>
 			<a href="/周杰伦.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
 			<a href="/薛之谦.html" title="经典" target="_blank"><h2>薛之谦</h2></a>
+			<a href="/校园经典.html" title="经典歌曲" target="_blank"><h2>校园经典</h2></a>
 		</section>
 		<section>
 			<h4>起风了</h4>
