--- a/校园经典.html
+++ b/校园经典.html
@@ -21,7 +21,7 @@
 	</style>
     </head>
     <body>
-        <header><h1>校园名曲</h1></header>
+        <header><h1>校园经典</h1></header>
         <main>
             <section>
                 <h4>凤凰花开的路口</h4>
