--- a/校园经典.html
+++ b/校园经典.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>校园名曲</title>
+    <title>校园经典</title>
     <style>
 		body {
 			background: url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
