--- a/index.html
+++ b/index.html
@@ -44,24 +44,17 @@
 		</section>
 		<section>
 			<a href="/周杰伦.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
-			<a href="/薛之谦.html" title="经典" target="_blank"><h2>薛之谦</h2></a>
+			<a href="/薛之谦.html" title="经典歌曲" target="_blank"><h2>薛之谦</h2></a>
 			<a href="/校园经典.html" title="经典歌曲" target="_blank"><h2>校园经典</h2></a>
+			<a href="/英文歌曲.html" title="英文歌曲" target="_blank"><h2>英文歌曲</h2></a>
 		</section>
 		<section>
 			<h4>起风了</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qifengle.mp3"></audio>
 			<h4>时光背面的我</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Shiguang.mp3"></audio>
-			<h4>Run Free</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Runfree.mp3"></audio>
-		    <h4>Poker Face</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Pokerface.mp3"></audio>
 			<h4>春娇与志明</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Chunjiao.mp3"></audio>
-			<h4>STAY</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Stay.mp3"></audio>
-			<h4>Love Story</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Lovestory.mp3"></audio>
 			<h4>不再犹豫</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Buzaiyouyu.mp3"></audio>
 		</section>
