--- a/校园经典.html
+++ b/校园经典.html
@@ -29,7 +29,7 @@
                  <h4>栀子花开</h4>
                  <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/栀子花开.mp3"></audio>
                  <h4>有何不可</h4>
-                 <adio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/有何不可.mp3"></audio>
+                 <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/有何不可.mp3"></audio>
                  <h4>那些花儿</h4>
                  <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/那些花儿.mp3"></audio>
                  <h4>起风了</h4>
