--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 			<a href="/英文歌曲.html" title="英文歌曲" target="_blank"><h2>英文歌曲</h2></a>
 		</section>
 		<section>
+			<h4>好想爱这个世界啊</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/好想爱这个世界啊.mp3"></audio>
+			<h4>光的方向</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/光的方向.mp3"></audio>
 			<h4>起风了</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qifengle.mp3"></audio>
 			<h4>时光背面的我</h4>
