--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 		</section>
 		<section>
 			<h4>好想爱这个世界啊</h4>
-			
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/好想爱这个世界啊.mp3"></audio>
+			<h4>光的方向</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/光的方向.mp3"></audio>
 			<h4>起风了</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qifengle.mp3"></audio>
