--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 			<span>联系方式:QQ/微信:240602718</span>			
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
 			<a href="https://space.bilibili.com/1049799175" title="慕幽蓝瑾" target="_blank">哔哩哔哩</a>			
-			<a href="https://www.kuaishou.com/profile/3x3x4eubymbq2fw" title="慕幽蓝瑾" target="_blank">快手</a>
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
 		</section>
 		<section>
@@ -47,6 +46,7 @@
 			<a href="/薛之谦.html" title="经典歌曲" target="_blank"><h2>薛之谦</h2></a>
 			<a href="/校园经典.html" title="经典歌曲" target="_blank"><h2>校园经典</h2></a>
 			<a href="/英文歌曲.html" title="英文歌曲" target="_blank"><h2>英文歌曲</h2></a>
+			<a href="/林俊杰.html" title="经典歌曲" target="_blank"><h2>林俊杰</h2></a>
 		</section>
 		<section>
 			<h4>光的方向</h4>
