--- a/林俊杰.html
+++ b/林俊杰.html
@@ -24,8 +24,12 @@
         <header><h1>林俊杰</h1></header>
         <main>
             <section>
+                <h4>可惜没如果</h4>
+                <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/可惜没如果.mp3"></audio>
                 <h4>背对背拥抱</h4>
                 <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/背对背拥抱.mp3"></audio>
+                <h4>曹操</h4>
+                <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/曹操.mp3"></audio>
                 <h4>江南</h4>
                 <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/江南.mp3"></audio>
                 <h4>小酒窝</h4>
