--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>慕幽音乐</title>
 	<style>
 		body {
-			background: url(https://cn.bing.com/th?id=OHR.LandsEndSunset_ZH-CN0737794484_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
+			background: url(https://tva4.sinaimg.cn/large/bfe05ea9ly1fxgvy898n2j21hc0u0wlg.jpg) fixed;
 			font-size: 1.2em;
 		}
 
