--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 			<a href="/林俊杰.html" title="经典歌曲" target="_blank"><h2>林俊杰</h2></a>
 		</section>
 		<section>
+			<h4>哪里都是你</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/哪里都是你.mp3"></audio>
 			<h4>光的方向</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/光的方向.mp3"></audio>
 			<h4>起风了</h4>
