--- a/index.html
+++ b/index.html
@@ -51,16 +51,8 @@
 		<section>
 			<h4>哪里都是你</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/哪里都是你.mp3"></audio>
-			<h4>MOM</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/MOM.mp3"></audio>
-			<h4>光的方向</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/光的方向.mp3"></audio>
-			<h4>起风了</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Qifengle.mp3"></audio>
-			<h4>时光背面的我</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Shiguang.mp3"></audio>
-			<h4>春娇与志明</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Chunjiao.mp3"></audio>
+			<h4>老男孩</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/老男孩.mp3"></audio>
 		</section>
 	</main>
 </body>
