--- a/周杰伦.html
+++ b/周杰伦.html
@@ -39,7 +39,7 @@
 			<h4>告白气球</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Gaobaiqiqiu.mp3"></audio>
 			<h4>半岛铁盒</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/半岛铁盒.flac"></audio>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/半岛铁盒.mp3"></audio>
         </section>
     </main>
 </body>
