--- a/周杰伦.html
+++ b/周杰伦.html
@@ -40,6 +40,8 @@
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Gaobaiqiqiu.mp3"></audio>
 			<h4>半岛铁盒</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/半岛铁盒.mp3"></audio>
+			<h4>反方向的钟</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/反方向的钟.flac"></audio>
         </section>
     </main>
 </body>
