--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>慕幽音乐</title>
+	<title>云泽音乐</title>
 	<style>
 		body {
 			background: url(https://tva4.sinaimg.cn/large/bfe05ea9ly1fxgvy898n2j21hc0u0wlg.jpg) fixed;
@@ -32,7 +32,7 @@
 </head>
 <body>
 	<header>
-		<h1>慕幽蓝瑾</h1><h1>音乐播放器</h1>
+		<h1>云泽</h1><h1>音乐播放器</h1>
 	</header>
 	<main>
 		<section id="links">
