--- a/周杰伦.html
+++ b/周杰伦.html
@@ -41,7 +41,9 @@
 			<h4>半岛铁盒</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/半岛铁盒.mp3"></audio>
 			<h4>反方向的钟</h4>
-			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/反方向的钟.flac"></audio>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/反方向的钟.mp3"></audio>
+			<h4>爱在西元前</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/爱在西元前.mp3"></audio>
         </section>
     </main>
 </body>
