--- a/周杰伦.html
+++ b/周杰伦.html
@@ -44,6 +44,8 @@
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/反方向的钟.mp3"></audio>
 			<h4>爱在西元前</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/爱在西元前.mp3"></audio>
+			<h4>明明就</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/明明就.mp3"></audio>
         </section>
     </main>
 </body>
