--- a/周杰伦.html
+++ b/周杰伦.html
@@ -46,6 +46,10 @@
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/爱在西元前.mp3"></audio>
 			<h4>明明就</h4>
 			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/明明就.mp3"></audio>
+			<h4>简单爱</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/简单爱.mp3"></audio>
+			<h4>等你下课</h4>
+			<audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/等你下课.mp3"></audio>
         </section>
     </main>
 </body>
