--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 	<header>
-		<h1>云泽</h1><h1>音乐播放器</h1>
+		<h1>音乐播放器</h1>
 	</header>
 	<main>
 		<section id="links">
@@ -40,6 +40,10 @@
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
 			<a href="https://space.bilibili.com/1049799175" title="慕幽蓝瑾" target="_blank">哔哩哔哩</a>			
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
+		</section>
+		<section id="links">
+			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank"><h1>QQ音乐排行榜</h1></a>
+			<a href="https://music.163.com/#/discover/toplist" title="排行榜" target="_blank"><h1>网易云音乐排行榜</h1></a>
 		</section>
 		<section>
 			<a href="/周杰伦.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
