--- a/英文歌曲.html
+++ b/英文歌曲.html
@@ -31,7 +31,9 @@
                  <h4>STAY</h4>
 			     <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Stay.mp3"></audio>
                  <h4>Love Story</h4>
-			    <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Love Story.mp3"></audio>
+			     <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Love Story.mp3"></audio>
+                 <h4>Normal No More</h4>
+                 <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Normal No More.mp3"></audio>
             </section>
         </main>
     </body>
