--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
 			<a href="https://space.bilibili.com/1049799175" title="慕幽蓝瑾" target="_blank">哔哩哔哩</a>			
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
 		</section>
-		<section id="links">
-			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank"><h1>QQ音乐排行榜</h1></a>
-			<a href="https://music.163.com/#/discover/toplist" title="排行榜" target="_blank"><h1>网易云音乐排行榜</h1></a>
-		</section>
 		<section>
+			<span id="links"><a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank"><h1>QQ音乐排行榜</h1></a>
+				<a href="https://music.163.com/#/discover/toplist" title="排行榜" target="_blank"><h1>网易云音乐排行榜</h1></a>
+			</span>
+		</section>
+			
+		<section>
+			
 			<a href="/周杰伦.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
 			<a href="/薛之谦.html" title="经典歌曲" target="_blank"><h2>薛之谦</h2></a>
 			<a href="/校园经典.html" title="经典歌曲" target="_blank"><h2>校园经典</h2></a>
