--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
 		a {
 			color: aquamarine;
 		}
-
-		section {
-			color: pink
-		}
 		#links {
 			text-align: center;
 		}
@@ -42,11 +38,9 @@
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
 		</section>
 		<section>
-			<span id="links"><a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank"><h1>QQ音乐排行榜</h1></a>
-				<a href="https://music.163.com/#/discover/toplist" title="排行榜" target="_blank"><h1>网易云音乐排行榜</h1></a>
-			</span>
+			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank"><h1>QQ音乐排行榜</h1></a>
+			<a href="https://music.163.com/#/discover/toplist" title="排行榜" target="_blank"><h1>网易云音乐排行榜</h1></a>
 		</section>
-			
 		<section>
 			
 			<a href="/周杰伦.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
