--- a/英文歌曲.html
+++ b/英文歌曲.html
@@ -34,6 +34,8 @@
 			     <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Love Story.mp3"></audio>
                  <h4>Normal No More</h4>
                  <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Normal No More.mp3"></audio>
+                 <h4>Cheating on You</h4>
+                 <audio controls preload="metadata" src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/media/audio/Cheating on You.mp3"></audio>
             </section>
         </main>
     </body>
