--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>不知名音乐</title>
 	<style>
-		body {
+		body{
 			background: url(https://tva4.sinaimg.cn/large/bfe05ea9ly1fxgvy898n2j21hc0u0wlg.jpg) fixed;
 			font-size: 1.2em;
 		}
 
-		header {
+		header{
 			color: aquamarine;
 			text-align: center;
 		}
 
-		a {
+		a{
 			color: aquamarine;
 		}
-		#links {
+		#links{
 			text-align: center;
 		}
 		span{
@@ -37,13 +37,10 @@
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
 			<a href="https://space.bilibili.com/1049799175" title="慕幽蓝瑾" target="_blank">哔哩哔哩</a>			
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
-		</section>
-		<span>
-			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank"><h1>QQ音乐排行榜</h1></a></span>
+			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank"><h1>QQ音乐排行榜</h1></a>
 			<a href="https://music.163.com/#/discover/toplist" title="排行榜" target="_blank"><h1>网易云音乐排行榜</h1></a>
-		
+		</section>
 		<section>
-			
 			<a href="/周杰伦.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
 			<a href="/薛之谦.html" title="经典歌曲" target="_blank"><h2>薛之谦</h2></a>
 			<a href="/英文歌曲.html" title="英文歌曲" target="_blank"><h2>英文歌曲</h2></a>
