--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		span{
 			color: aquamarine;
 		}	
+		#wen{
+			text-align: center;
+		}
 	</style>
 </head>
 <body>
@@ -37,9 +40,11 @@
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
 			<a href="https://space.bilibili.com/1049799175" title="慕幽蓝瑾" target="_blank">哔哩哔哩</a>			
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
-			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank"><h1>QQ音乐排行榜</h1></a>
-			<a href="https://music.163.com/#/discover/toplist" title="排行榜" target="_blank"><h1>网易云音乐排行榜</h1></a>
 		</section>
+		<section id="wen">
+			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank">QQ音乐排行榜</a>
+			<a href="https://music.163.com/#/discover/toplist" title="排行榜" target="_blank">网易云音乐排行榜</a>
+	    </section>
 		<section>
 			<a href="/周杰伦.html" title="经典歌曲" target="_blank"><h2>周杰伦</h2></a>
 			<a href="/薛之谦.html" title="经典歌曲" target="_blank"><h2>薛之谦</h2></a>
