--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 		}
 
 		header{
-			color: aquamarine;
+			color: skyblue;
 			text-align: center;
 		}
 
 		a{
-			color: aquamarine;
+			color: skyblue;
 		}
 		#links{
 			text-align: center;
 		}
 		span{
-			color: aquamarine;
+			color:pink
 		}	
 		#wen{
 			text-align: center;
+		}
+		input{
+			background-color: skyblue;
+			color: pink;
 		}
 	</style>
 </head>
@@ -34,7 +38,8 @@
 		<h1>不知名音乐播放器</h1>
 	</header>
 	<main>
-		
+		<input type="text">
+		<input type="button" value="搜索">
 		<section id="links">
 			<span>联系方式:QQ/微信:240602718</span>			
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>
