--- a/countdown.html
+++ b/countdown.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://static.lcwebsite.cn/js/timer/class.js"></script>
     <script defer src="https://cdn.jsdelivr.net/gh/Wen-xili/Wen-xili.github.io@main/js/count.js"></script>
     <title>中考倒计时</title>
     <style>
@@ -25,4 +26,4 @@
     </div>
     </section>
 </body>
-</html>
+</html
