--- a/countdown.html
+++ b/countdown.html
@@ -10,6 +10,7 @@
     <style>
         body{
             text-align: center;
+            text-;
             color: pink;
             background: url(https://tva4.sinaimg.cn/large/bfe05ea9ly1fxgvy898n2j21hc0u0wlg.jpg) fixed;
         }
@@ -18,11 +19,7 @@
 <body>
     <header><h1>中考倒计时</h1></header>
     <section>
-        <div id="crossYear">
-        <span>中考倒计时</span>
-        <span id="crossHours"></span>时
-        <span id="crossMinutes"></span>分
-        <span id="crossSeconds"></span>秒
+        <div id="countdownText"><span id="countdownDays">-</span>天<span id="countdownHours">-</span>时<span id="countdownMinutes">-</span>分<span id="countdownSeconds">-</span>秒</div>
     </div>
     </section>
 </body>
