--- a/countdown.html
+++ b/countdown.html
@@ -10,7 +10,6 @@
     <style>
         body{
             text-align: center;
-            text-;
             color: pink;
             background: url(https://tva4.sinaimg.cn/large/bfe05ea9ly1fxgvy898n2j21hc0u0wlg.jpg) fixed;
         }
@@ -19,8 +18,11 @@
 <body>
     <header><h1>中考倒计时</h1></header>
     <section>
-        <div id="countdownText"><span id="countdownDays">-</span>天<span id="countdownHours">-</span>时<span id="countdownMinutes">-</span>分<span id="countdownSeconds">-</span>秒</div>
-    </div>
+     <div id="countdownText">
+            <span id="countdownDays">-</span>天
+            <span id="countdownHours">-</span>时
+            <span id="countdownMinutes">-</span>分
+            <span id="countdownSeconds">-</span>秒
     </section>
 </body>
 </html
