--- a/countdown.html
+++ b/countdown.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://static.lcwebsite.cn/js/timer/class.js"></script>
     <title>中考倒计时</title>
     <style>
         body{
@@ -23,6 +22,9 @@
             <span id="countdownMinutes">-</span>分
             <span id="countdownSeconds">-</span>秒
     </section>
+    <script>
+        class Timer{constructor(time){this.base=new Date(time??Date.now());}reset(time){return this.base=new Date(time??Date.now());}timing(time){this.time=new Date(time??Date.now());const isCountdown=this.time<this.base,ms=isCountdown?this.base-this.time:this.time-this.base,sec=ms/1000,min=sec/60,hour=min/60,day=hour/24;return{days:Math.floor(day),hours:Math.floor(hour%24),minutes:Math.floor(min%60),seconds:Math.floor(sec%60),milliseconds:ms%1000,isCountdown};}}
+    </script>
     <script>
         function refresh() {
     const timing = timer.timing();
