--- a/gk.html
+++ b/gk.html
@@ -7,11 +7,12 @@
     <title>高考成绩查询倒计时</title>
     <style>
         body{
+            background:url(https://cn.bing.com/th?id=OHR.MayonVolcano_ZH-CN0183039911_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp)
             text-align: center;
             color: pink;
-            background: url(https://tse1-mm.cn.bing.net/th/id/R-C.f05b7cd392ec9b98849e63e3aa2d7455?rik=3GJ3tnOW23cqiA&riu=http%3a%2f%2fi3.img.969g.com%2fdown%2fimgx2015%2f01%2f07%2f289_092815_d43b2.jpg&ehk=RiRBvBXclYgiXPbiPWp9IFiZy5mKDUEdNrEERLWnwzk%3d&risl=&pid=ImgRaw&r=0) fixed;
             font-size: 1.3em;
         }
+        
     </style>
 </head>
 <body>
