--- a/qmk.html
+++ b/qmk.html
@@ -9,7 +9,7 @@
         body{
             text-align: center;
             color: pink;
-            background: url(https://tva4.sinaimg.cn/large/bfe05ea9ly1fxgvy898n2j21hc0u0wlg.jpg) fixed;
+            background: url(https://cn.bing.com/th?id=OHR.MayonVolcano_ZH-CN0183039911_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
             font-size: 1.7em;
         }
     </style>
