--- a/gk.html
+++ b/gk.html
@@ -7,10 +7,10 @@
     <title>高考成绩查询倒计时</title>
     <style>
         body{
-            background:url(https://cn.bing.com/th?id=OHR.MayonVolcano_ZH-CN0183039911_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp)
             text-align: center;
             color: pink;
-            font-size: 1.3em;
+            background: url(https://cn.bing.com/th?id=OHR.MayonVolcano_ZH-CN0183039911_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp) fixed;
+            font-size: 1.7em;
         }
         
     </style>
