--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<a href="https://space.bilibili.com/1049799175" title="慕幽蓝瑾" target="_blank">哔哩哔哩</a>			
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
 			<a href="/countdown.html" title="倒计时" target="_blank">中考倒计时</a>
-			<a href="/gk.html" title="查询" target="_blank">高考成绩查询倒计时</a>
+			<a href="/gk.html" title="填报" target="_blank">志愿填报倒计时</a>
 		</section>
 		<section id="wen">
 			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank">QQ音乐排行榜</a>
