--- a/countdown.html
+++ b/countdown.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>中考倒计时</title>
+    <title>中考成绩查询倒计时</title>
     <style>
         body{
             text-align: center;
@@ -38,7 +38,7 @@
         minutes.innerText = timing.minutes;
         seconds.innerText = timing.seconds;
     } else {
-        text.innerText = '中考已经开始或已结束！';
+        text.innerText = '中考成绩查询已经开始或已结束！';
         refreshIntervalID = clearInterval(refreshIntervalID);
     }  
  }
