--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		<section id="links">		
 			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>			
 			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
+			<a href="cn.bing.com" title="必应" target="_blank">必应</a>
 		</section>
 		<section id="wen">
 			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank">QQ音乐排行榜</a>
