--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>不知名音乐</title>
 	<style>
 		body{
-			background: url(https://tva4.sinaimg.cn/large/bfe05ea9ly1fxgvy898n2j21hc0u0wlg.jpg) fixed;
+			background: url() fixed;
 			font-size: 1.5em;
 		}
 
@@ -34,9 +34,7 @@
 		<h1>不知名音乐播放器</h1>
 	</header>
 	<main>
-		<section id="links">		
-			<a href="https://lcyzjx.cn:444/" title="官网" target="_blank">川中计协</a>			
-			<a href="https://www.yhdmp.cc/" title="动漫" target="_blank">樱花动漫</a>
+		<section id="links">			
 			<a href="cn.bing.com" title="必应" target="_blank">必应</a>
 		</section>
 		<section id="wen">
