--- a/周杰伦.html
+++ b/周杰伦.html
@@ -6,7 +6,7 @@
     <title>周杰伦</title>
     <style>
 		body {
-			background: url(https://tva4.sinaimg.cn/large/bfe05ea9ly1fxgvy898n2j21hc0u0wlg.jpg) fixed;
+			background: url() fixed;
 			font-size: 1.2em;
 		}
 
