--- a/英文歌曲.html
+++ b/英文歌曲.html
@@ -6,7 +6,7 @@
     <title>英文歌曲</title>
     <style>
 		body {
-			background: url() fixed;
+			background: url(https://img.picui.cn/free/2024/09/11/66e133675b5ec.jpg) fixed;
 			font-size: 1.2em;
 		}
 
