--- a/tdq.html
+++ b/tdq.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zkz</title>
+    <title>tdq</title>
 </head>
 <body>
-    <img src="https://img.picui.cn/free/2024/09/12/66e23be209898.jpg" alt="IMG_20200802_091227.jpg" title="IMG_20200802_091227.jpg" />
+    <img src="https://img.picui.cn/free/2024/09/12/66e23ec9e43f2.jpg" alt="mmexport1700919471567.jpg" title="mmexport1700919471567.jpg" />
 </body>
 </html>
