--- a/473.html
+++ b/473.html
@@ -7,14 +7,26 @@
 </head>
 <style>
     header{
-        color: black;
         text-align: center;
     }
+    body{
+        background:url(https://img.picui.cn/free/2024/09/11/66e133675b5ec.jpg) fixed;
+        color: aqua;
+    }
+
 </style>
 <body>
     <header>
-        <h1>宿舍现状</h1>
+        <h1>473宿舍官网</h1>
     </header>
-    <img src="https://img.picui.cn/free/2024/09/12/66e2407b918a7.jpg" alt="IMG_20240910_230802.jpg" title="IMG_20240910_230802.jpg" />
+    <main>
+        <section>
+            <a href="http://zjxy.jrhsz.com/app/user/info" title="查询" target="_blank"><h2>水电查询</h2></a>
+            <a href="http://card.beitoucloud.com/yxth5/?code=031ZJn000UtNOS1A8n400HQRed4ZJn09&state=1726105293483#/home" title="充值" target="_blank"><h2>水电充值</h2></a>
+            <a href="http://bx.scauzj.edu.cn/public/m_index.html" title="报修" target="_blank"><h2>宿舍报修</h2></a>
+        </section>
+    </main>
+
+
 </body>
 </html>
