--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</header>
 	<main>
 		<section id="links">			
-			<a href="cn.bing.com" title="必应" target="_blank">必应</a>
+			<a href="https://cn.bing.com/" title="必应" target="_blank">必应</a>
 		</section>
 		<section id="wen">
 			<a href="https://y.qq.com/n/ryqq/toplist/62" title="排行榜" target="_blank">QQ音乐排行榜</a>
